# rs-to_primitive

./: Cargo.toml  README.md
src/: lib.rs  to_primitive.rs
